--- a/views/app.haml
+++ b/views/app.haml
@@ -1,6 +1,7 @@
 !!!
 %html.no-js{ :lang => "en" }
   %head
+    %title Blog
     %meta{ :charset => "utf-8" }
     %meta{ :http => { :equiv => "X-UA-Compatible" }, :content => "IE=edge,chrome=1" }
     %meta{ :name => "description", :content => @description ||= "" }
@@ -16,5 +17,6 @@
     %script{ :src => "/js/vendor/jquery-1.9.1.min.js" }
     %script{ :src => "/js/vendor/handlebars-1.0.0-rc.3.js" }
     %script{ :src => @ember }
+    %script{ :src => @ember_data }
     %script{ :src => "/js/plugins.js" }
     %script{ :src => "/js/main.js" }
